data/derived/comb/progs/unify/prog2299.ml.out
Characters 20-21:
  Printf.sprintf" %d" g;;
                      ^
Error: This expression has type int * int -> int
       but an expression was expected of type int
